# Doodles

./: app.py  docker-compose.yml  dockerfile  doodle.sql  pyproject.toml
templates/: base.html  index.html
